# SubtitleStudio

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY.md
resources/: SubtitleStudio.qrc
src/: main.cpp
src/app/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  PlaybackState.h  Session.h  TimelineViewport.h
src/subtitle/: SRTParser.cpp  SRTParser.h  Subtitle.cpp  Subtitle.h  SubtitleSelection.h  SubtitleTrack.cpp  SubtitleTrack.h
src/subtitle/editor/: SubtitleDragState.h  SubtitleEditor.cpp  SubtitleEditor.h
src/ui/: MainWindow.cpp  MainWindow.h  Theme.h
src/ui/widgets/: PlaybackControlsWidget.cpp  PlaybackControlsWidget.h  SubtitleEditorWidget.cpp  SubtitleEditorWidget.h  TimelineWidget.cpp  TimelineWidget.h  VideoWidget.cpp  VideoWidget.h
src/ui/widgets/timeline/: TimelineDragState.h  TimelineHit.h
src/util/: Timecode.cpp  Timecode.h
src/video/: VideoPlayer.cpp  VideoPlayer.h
